# docmesh

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_document_analysis.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: ask.py  documents.py  events.py  graph.py  health.py  search.py
backend/app/core/: config.py  logging.py  middleware.py  ratelimit.py
backend/app/graph/: __init__.py  combiner.py  entities.py  semantic.py  topics.py
backend/app/ingestion/: broker.py  chunker.py  queue.py  validators.py
backend/app/ingestion/extractors/: __init__.py  base.py  docx.py  pdf.py  text.py
backend/app/llm/: __init__.py  interface.py  local_llama.py  prompt.py  qa_prompt.py  template.py
backend/app/schemas/: ask.py  common.py  documents.py  graph.py  search.py
backend/app/search/: bm25.py  embedder.py  fusion.py  reranker.py
backend/app/services/: answer_service.py  document_service.py  explanation_service.py  graph_service.py  search_service.py
backend/app/storage/: database.py  interfaces.py  tables.py
backend/app/storage/sql/: analysis_repo.py  chunk_repo.py  document_repo.py  edge_repo.py  event_repo.py  explanation_repo.py
backend/app/storage/vector/: faiss_store.py
backend/tests/: conftest.py
backend/tests/fixtures/: fakes.py  make_files.py
backend/tests/integration/: test_ask_api.py  test_document_repo.py  test_edge_repo.py  test_explanation_api.py  test_explanation_repo.py  test_graph_flow.py  test_graph_query.py  test_health.py  test_ingest_search.py  test_real_llm.py  test_upload_flow.py
backend/tests/unit/: test_answer_service.py  test_chunker.py  test_config.py  test_connection_scoring.py  test_explanation.py  test_extractors.py  test_qa_prompt.py  test_ratelimit.py  test_rrf.py  test_validators.py
design/: graph-mockup.html  graph-visual-spec.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  (+1 more)
(+48 files in other folders)
