[project]
name = "docmesh-backend"
version = "0.1.0"
description = "DocMesh backend — semantic document intelligence from primitives"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are intentionally called in defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.File"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "slow: loads real ML models (bge/cross-encoder — first run downloads ~220 MB to the HF cache — plus the pip-installed en_core_web_sm spaCy model; the real-LLM test additionally downloads the ~1 GB Qwen2.5-1.5B GGUF to data/models/); run with `pytest -m slow`",
]
# The slow tier is opt-in: default runs stay fast and offline.
addopts = "-m 'not slow'"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true
